# ai-youtube-automation

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 533e9cd3748b_add_voice_narrations_table.py  69deabac3f7e_add_video_scripts_table.py  76106014e5ac_create_trend_intelligence_tables.py  dbf8e5f32f40_add_assembled_videos_table.py  e7f948b284ae_add_youtube_uploads_table.py  e8a921b61d6a_add_compliance_safeguard_columns.py
backend/app/: main.py
backend/app/api/: exception_handlers.py
backend/app/core/: config.py  logging.py
backend/app/exceptions/: publish_exceptions.py  script_exceptions.py  trend_exceptions.py  video_exceptions.py  voice_exceptions.py
backend/app/repositories/: publish_repository.py  script_repository.py  trend_repository.py  video_repository.py  voice_repository.py
backend/app/services/: ai_analysis_service.py  orchestration_service.py  publish_service.py  script_service.py  trend_service.py  video_service.py  voice_service.py
backend/scripts/: authorize_youtube.py
backend/tests/db/: conftest.py  test_publish_repository_db.py  test_script_repository_db.py  test_trend_repository_db.py  test_video_repository_db.py  test_voice_repository_db.py
backend/tests/integration/: test_orchestration_api.py  test_publish_api.py  test_scripts_api.py  test_trends_api.py  test_video_api.py  test_voice_api.py
backend/tests/unit/: test_ai_analysis_service.py  test_ffmpeg_assembler.py  test_orchestration_service.py  test_publish_service.py  (+6 more)
(+29 files in other folders)
