[project]
name = "ai-creator-os-backend"
version = "0.1.0"
description = "AI Creator OS backend - Trend Intelligence API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "redis>=5.2",
    "httpx>=0.27",
    "anthropic>=0.40",
    "google-genai>=2.12",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "db: requires a live Postgres reachable at DATABASE_URL (run `docker compose up -d postgres` and `alembic upgrade head` first). Excluded by default.",
]
addopts = "-m \"not db\""

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()-in-default-argument is the idiomatic DI pattern, not a bug.
ignore = ["B008"]
